--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^3.5.9",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.5.9",
+    "@types/next-auth": "^3.15.0",
     "@types/react": "17.0.29",
     "eslint": "8.0.0",
     "eslint-config-next": "11.1.2",
